# marker-pose-estimate-system

./: README.md
install/: local_setup.sh  setup.sh
install/camera_calibration/share/camera_calibration/: package.sh
install/depth_image_proc/include/depth_image_proc/: conversions.hpp  depth_traits.hpp  point_cloud_xyz.hpp  point_cloud_xyz_radial.hpp  point_cloud_xyzi.hpp  point_cloud_xyzi_radial.hpp  point_cloud_xyzrgb.hpp  point_cloud_xyzrgb_radial.hpp  visibility.h
install/depth_image_proc/share/depth_image_proc/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/exp_logger/lib/exp_logger/: exp_logger
install/exp_logger/share/exp_logger/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/image_pipeline/share/image_pipeline/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/image_proc/include/image_proc/: crop_decimate.hpp  crop_non_zero.hpp  debayer.hpp  edge_aware.hpp  processor.hpp  rectify.hpp  resize.hpp
install/image_proc/share/image_proc/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  (+2 more)
log/: latest_build
src/: setup_for_marker
src/exp_logger/: package.xml  setup.cfg  setup.py
src/exp_logger/exp_logger/: exp_logger.py
src/marker_arm/: CMakeLists.txt
src/marker_arm/bt/: pure_bt.xml
src/marker_arm/include/: marker_arm_control_node.hpp  marker_arm_perception_node.hpp
src/marker_arm/launch/: fix_bringup.launch.py  marker_nav2.launch.py  mov_bringup.launch.py
src/marker_arm/params/: arducam_params.yaml  arducamera_info.yaml  fix_aruco_params.yaml  fix_cam_params.yaml  fix_camera_info.yaml  fix_control_params.yaml  fix_perception_params.yaml  localization.yaml  mov_aruco_params.yaml  mov_cam_params.yaml  mov_camera_info.yaml  mov_control_params.yaml  mov_perception_params.yaml  nav2_params.yaml
src/marker_arm/rviz/: nav2_default_view.rviz
src/marker_arm/src/: marker_arm_control_node.cpp  marker_arm_perception_node.cpp
src/marker_arm/urdf/: marker_fix.total_station.xacro  marker_fix.urdf.xacro  marker_mov.urdf.xacro
src/ros2_aruco-foxy/: test.py
(+644 files in other folders)
